# KafkaCache

./: Cargo.toml  docker-compose.yaml
src/: consumer.rs  producer.rs  server.rs
